<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".GameFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/wins" />

            <TextView
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/loss" />

            <TextView
                android:layout_column="0"
                android:layout_row="2"
                android:text="@string/total_wins" />

            <TextView
                android:layout_column="0"
                android:layout_row="3"
                android:text="@string/total_losses" />

            <TextView
                android:layout_column="1"
                android:layout_row="0"
                android:id="@+id/win_count" />

            <TextView
                android:layout_column="1"
                android:layout_row="1"
                android:id="@+id/loss_count" />

            <TextView
                android:layout_column="1"
                android:layout_row="2"
                android:id="@+id/total_wins" />

            <TextView
                android:layout_column="1"
                android:layout_row="3"
                android:id="@+id/total_losses" />

        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_door"
            android:id="@+id/prompt"
            android:textSize="26sp"
            android:layout_gravity="center"
            android:layout_marginVertical="30dp" />

        <include layout="@layout/doors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="30dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/three"
                android:id="@+id/three"
                android:visibility="invisible" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/two"
                android:id="@+id/two"
                android:visibility="invisible"
                android:layout_alignTop="@id/three"
                android:layout_alignBottom="@id/three"
                android:layout_alignLeft="@id/three"
                android:layout_alignRight="@id/three" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/one"
                android:id="@+id/one"
                android:visibility="invisible"
                android:layout_alignTop="@id/three"
                android:layout_alignBottom="@id/three"
                android:layout_alignLeft="@id/three"
                android:layout_alignRight="@id/three" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/conclusion"
            android:layout_marginBottom="40dp"
            android:textSize="20sp"
            android:layout_gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:enabled="false"
            android:id="@+id/again"
            android:text="Play again"
            android:layout_gravity="center" />

    </LinearLayout>

</FrameLayout>